--- a/style.css
+++ b/style.css
@@ -67,23 +67,18 @@ header h1 {
 
 main .idade {
     font-size: 1.8em;
-    /* 2. Fundo amarelo bebê e texto escuro */
-    color: var(--cor-texto); 
+    /* 1. Cor da fonte alterada para branco */
+    color: white; 
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.3); /* Sombra para legibilidade */
     background-color: var(--cor-amarelo-bebe);
     padding: 5px 15px;
     border-radius: 15px;
     display: inline-block;
     font-weight: 700;
     margin-top: 25px;
+    margin-bottom: 35px; /* Adicionado espaço abaixo */
     font-family: 'Baloo 2', cursive;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-}
-
-main .mensagem {
-    font-size: 1em;
-    line-height: 1.6;
-    /* 3. Espaçamento aumentado */
-    margin: 30px 0 35px;
 }
 
 /* Classe para textos com fundo branco */
@@ -213,3 +208,4 @@ footer {
         opacity: 0;
     }
     }
+    
